# SharpRetro

./: .gitignore  CLAUDE.md  CodeGeneration.md  SharpRetro.sln  SharpRetro.sln.DotSettings  run-lego.sh
Aarch64Common/: Aarch64Common.csproj  Common.cs
Aarch64Cpu/: Aarch64Cpu.csproj  Class1.cs  CpuState.cs  Extensions.cs  Recompiler.cs  RuntimePointer.cs
Aarch64Generator/: Aarch64Def.cs  Aarch64Generator.csproj  Builtins.cs  DisassemblerStub.cs.skip  Program.cs  RecompilerStub.cs.skip  RegisterMaskerStub.cs.skip  aarch64.isa
CilJit/: CilBuilder.cs  CilJit.cs  CilJit.csproj  CilLocalVar.cs  CilRuntimeValue.cs  CilStructRef.cs
CoppermineCpu/: Class1.cs  CoppermineCpu.csproj
CoppermineGenerator/: CoppermineDef.cs  CoppermineGenerator.csproj  Program.cs  coppermine.isa
CoreArchCompiler/: BuiltinTypes.cs  CodeBuilder.cs  ControlFlow.cs  Core.cs  CoreArchCompiler.csproj  Def.cs  ExecutionState.cs  Extensions.cs  HangChecker.cs  Int128.cs  ListParser.cs  Logic.cs  MacroProcessor.cs  Memory.cs  Preprocessor.cs  ScalarMath.cs  StringManipulation.cs  TopLevelProcessing.cs  Vector128.cs  VectorMath.cs
DamageCore/: Apu.cs  Core.cs  Cpu.cs  DamageCore.csproj  ICartridge.cs  Interpreter.cs  Memory.cs  Ppu.cs  ScalingMode.cs  State.cs  Timer.cs  Timing.cs
DamageGenerator/: DamageGenerator.csproj  DisassemblerStub.cs.skip  DmgDef.cs  Expressions.cs  InterpreterStub.cs.skip  Program.cs  sm83.isa
UmbraCore/NativeLib/: CMakeLists.txt  glslc.h  glslc.mm  library.cpp  library.h  library.mm  nv.cpp  nv.h  nvn.h  nvnBlendState.cpp  nvnBlendState.mm  nvnBootstrap.cpp  nvnBootstrap.mm  nvnBuffer.cpp  nvnBuffer.mm  nvnChannelMaskState.cpp  nvnChannelMaskState.mm  nvnColorState.mm  nvnCommandBuffer.cpp  nvnCommandBuffer.mm  nvnDepthStencilState.mm  nvnDevice.cpp  nvnDevice.mm  nvnEvent.cpp  nvnEvent.mm  nvnMemoryPool.cpp  nvnMemoryPool.mm  nvnMultisampleState.mm  nvnPolygonState.cpp  nvnPolygonState.mm  nvnProgram.cpp  nvnProgram.mm  nvnQueue.cpp  nvnQueue.mm  nvnSampler.mm  nvnSamplerBuilder.mm  nvnSamplerPool.cpp  nvnSamplerPool.mm  nvnSync.cpp  nvnSync.mm  (+15 more)
(+267 files in other folders)
